# Tara

./: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: release.yml
extra/: tara.service
lib/component-macro/: Cargo.toml
lib/component-macro/src/: lib.rs
lib/tara-util/: Cargo.toml
lib/tara-util/benches/: ipc.rs
lib/tara-util/src/: lib.rs  logging.rs  paths.rs
lib/tara-util/src/ipc/: mod.rs  socket.rs
lib/tara-util/tests/: _logger.rs  server-client-threads.rs
src/: config.rs  database.rs  error.rs  main.rs  paths.rs
src/commands/: define.rs  mod.rs  wiki.rs
src/commands/conversions/: currency.rs  mod.rs  temperature.rs
src/commands/random/: images.rs  mod.rs  quote.rs
src/commands/role/: mod.rs
src/commands/search/: ddg.rs  mod.rs
src/commands/settings/: mod.rs  set.rs  view.rs
src/commands/wiki/: api.rs  mod.rs
tara/: Cargo.toml
tara-util/: Cargo.toml  README.md
tara-util/src/: error.rs  paths.rs
tara-util/tests/: server-client-threads.rs
tara-web-config/: Cargo.toml
tara-web-config/src/: app.rs  dark_mode.rs  lib.rs  main.rs
tara/.sqlx/: query-52dc9b28e0b96ac5989b9c902d7393069287a132495bf582befc208b04a7ac99.json  query-5b63074093ac7380639d062916c2c0f0c6392b7050b4b1807688adc75da58218.json  query-7de93e338864b66b8a98fcda66534318ec76f26a67ca73f8795cb50bb1bb9b38.json  query-94e2261e0684de9753ce9111a28b068f7f9b9580ffd0c315847a97be651817c1.json  query-c361213413ab971af844ad382d5f703503b33fe2aa04addccea859e12db535eb.json
tara/debian/: service
tara/migrations/: 20230720221623_guilds.sql
tara/src/: componet.rs  config.rs  database.rs  defaults.rs  error.rs  init.rs  ipc.rs  lib.rs  llm.rs  logging.rs  main.rs  paths.rs
tara/src/commands/: common.rs  core.rs  define.rs  mod.rs  movie.rs  series.rs
tara/src/commands/conversions/: currency.rs  mod.rs  temperature.rs
tara/src/commands/help/: mod.rs
tara/src/commands/music/: mod.rs  youtube.rs
tara/src/commands/random/: emoji.rs  images.rs  mod.rs  quote.rs
tara/src/commands/role/: mod.rs
tara/src/commands/search/: ddg.rs  image.rs  mod.rs
tara/src/commands/settings/: mod.rs  set.rs  view.rs
tara/src/commands/wiki/: api.rs  mod.rs
tara/src/config/: ai.rs  mod.rs  music.rs
tools/: publish.sh
