[package]
name = "tara"
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
description = "A free, open-source, community-driven, speedy, stable, self-hosted, Discord bot."
repository = "https://github.com/El-Wumbus/Tara"
keywords = ["discord", "discord-bot"]
authors = ["Decator <decator.c@proton.me>"]

[profile.release]
strip = "symbols"
lto = "thin"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
lazy_static = "1.4.0"
async-trait = "0.1.68"
rand = "0.8.5"
serde_json = "1.0.95"
reqwest = "0.11.16"
structstruck = "0.4.0"
urlencoding = "2.1.2"
truncrate = "0.1.3"
rusqlite = "0.28.0" 
bincode = "1.3.3"
hex-string = "0.1.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.21.0"
cached = "0.42.0"
chrono = { version = "0.4.24", features = ["serde"] }
scraper = "0.15.0"
rustrict = { version = "0.7.4", features = ["customize"] }
anyhow = "1.0.70"
serde_with = { version = "2.3.1", features = ["chrono"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
