[package]
name = "tara"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Tara is a modern, free, open-source, self-hostable Discord bot."
repository = "https://github.com/El-Wumbus/Tara"
keywords = ["discord", "discord-bot"]
authors = ["Decator <decator.c@proton.me>"]

[profile.release]
strip = true
lto = "thin"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"], git = "https://github.com/serenity-rs/serenity", rev = "c628b15228ae1044d2a3e785a52b9cd8e8f52f21"}
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1"
lazy_static = "1.4.0"
async-trait = "0.1.68"
rand = "0.8.5"
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"]}
structstruck = "0.4"
urlencoding = "2.1.2"
truncrate = "0.1.3"
chrono = { version = "0.4.24", features = ["serde"] }
scraper = "0.16.0"
rustrict = { version = "0.7.5", features = ["customize"] }
anyhow = "1"
directories = "5.0.0"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
rustyline = "11.0"
once_cell = { version = "1.17", features = ["parking_lot"] }
ron = "0.8"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
