[workspace]
members = [
    "tara",
    "lib/*",
]
resolver = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.dev.package.ggml-sys] # So it's not too slow
opt-level = 3


# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]

installers = ["shell", "powershell"]
