[package]
name = "tara"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Tara is a modern, free, open-source, self-hostable Discord bot."
repository = "https://github.com/El-Wumbus/Tara"
keywords = ["discord", "discord-bot"]
authors = ["Decator <decator.c@proton.me>"]

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "cache",
], git = "https://github.com/serenity-rs/serenity", rev = "a4cd9f451cf3cbf758e71aa9bcdc26edd4d739eb" }
songbird = { git = "https://github.com/serenity-rs/songbird/", rev = "22fe3f3d4e43db67f1cdb7c9574867539517fb51" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "local-time",
    "env-filter",
    "smallvec",
    "parking_lot",
] }
thiserror = "1"
lazy_static = "1.4.0"
async-trait = "0.1.68"
rand = "0.8.5"
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }
structstruck = "0.4"
urlencoding = "2.1.2"
truncrate = "0.1.3"
chrono = { version = "0.4.24", features = ["serde"] }
scraper = "0.16.0"
rustrict = { version = "0.7.5", features = ["customize"] }
anyhow = "1"
directories = "5.0.0"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
rustyline = "11.0"
once_cell = { version = "1.17", features = ["parking_lot"] }
ron = "0.8"
crossbeam-queue = "0.3.8"
csv-async = { version = "1.2.6", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
