[package]
name = "tara"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Tara is a modern, free, open-source, self-hostable Discord bot."
repository = "https://github.com/El-Wumbus/Tara"
keywords = ["discord", "discord-bot"]
authors = ["Decator <decator.c@proton.me>"]

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
features = ["music"]

[dependencies]
tara-util = {path = "../tara-util"}
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "cache",
    "voice",
], git = "https://github.com/serenity-rs/serenity", branch = "next" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "local-time",
    "env-filter",
    "smallvec",
    "parking_lot",
] }
thiserror = "1"
lazy_static = "1.4.0"
async-trait = "0.1.68"
rand = "0.8.5"
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }
structstruck = "0.4"
urlencoding = "2.1.2"
truncrate = "0.1.3"
chrono = { version = "0.4.24", features = ["serde"] }
scraper = "0.16.0"
rustrict = { version = "0.7.5", features = ["customize"] }
anyhow = "1"
directories = "5.0.0"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
rustyline = "11.0"
once_cell = { version = "1.17", features = ["parking_lot"] }
ron = "0.8"
convert_case = "0.6.0"
csv-async = { version = "1.2.6", features = ["tokio"] }

# Music
songbird = { optional = true, git = "https://github.com/serenity-rs/songbird", rev = "0044728b5407aa7644153c72158aa3ee99c69bfa", features = [
    "serenity",
    "rustls",
] }
symphonia = { features = [
    "aac",
    "mp3",
    "isomp4",
    "alac",
], version = "0.5", optional = true }
youtubei-rs = { version = "1.3.5", optional = true }
humantime = { version = "2.1", optional = true }
uuid = { version = "1.3.3", optional = true }
regex = { version = "1.8.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["stable"]
stable = []
alpha = ["music"]
music = ["dep:songbird", "dep:symphonia", "dep:youtubei-rs", "dep:humantime", "dep:uuid", "dep:regex"]
